--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
+# Dynamic Knowledge Base API Configuration
+
 # Server Configuration
-PORT=3000
 NODE_ENV=development
+PORT=3000
 
 # Database Configuration
 DATABASE_PATH=./data/database.json
 
-# Development Configuration
+# Logging Configuration
 LOG_LEVEL=info
+
+# Development Configuration
+DEBUG=app:*
