--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.kiro/*
+
 # Runtime data
 pids
 *.pid
@@ -41,6 +41,9 @@ jspm_packages/
 .env.test
 .env.local
 .env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build output
 dist/
@@ -62,17 +65,25 @@ build/
 ehthumbs.db
 Thumbs.db
 
-# Database files
-data/
+# Project specific database and data files
+data/database.json
+data/backups/
+data/archives/
 *.db
 *.sqlite
 
 # Logs
-logs
+logs/
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+
+
+# Kiro (keep steering and specs)
+.kiro/settings/
+.kiro/cache/
