--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.54.0",
@@ -41,6 +42,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
