updating docs and users logic

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# Dynamic Knowledge Base API Configuration
-
-# Server Configuration
-NODE_ENV=development
-PORT=3000
+# JWT Configuration
+JWT_ACCESS_SECRET=your-super-secret-jwt-access-key-change-in-production
+JWT_REFRESH_SECRET=your-super-secret-jwt-refresh-key-change-in-production
+JWT_ACCESS_EXPIRY=1h
+JWT_REFRESH_EXPIRY=7d
 
 # Database Configuration
 DATABASE_PATH=./data/database.json
 
-# Logging Configuration
-LOG_LEVEL=info
-
-# Development Configuration
-DEBUG=app:*
+# Server Configuration
+PORT=3000
+NODE_ENV=development
