--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.9.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -48,9 +50,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13"
   }
 }
